infrastructure/authentication/authelia/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-${cluster}-${domain}
  namespace: controller-authentication
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.${cluster}.${domain}
    external-dns.alpha.kubernetes.io/target: ${cluster}.${domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${cluster}.${domain}`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: wildcard.${cluster}.${domain}.tls
